# melenBot_1

./: DCbot_Ollama.py  embeddings.py  greet.json  jokes.json  main.py  models.txt  pyproject.toml  ragBuilder.py
